--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
 <li class="menu__entry"><a href="{{ site.baseurl}}/">about</a></li>
 <li class="menu__entry"><a href="{{ site.baseurl }}/projects">projects</a></li>
 <li class="menu__entry"><a href="{{ site.baseurl }}/posts">posts</a></li>
-<li class="menu__entry"><a href="{{ site.baseurl }}/posts">TIL</a></li>
+<li class="menu__entry"><a href="{{ site.baseurl }}/TIL">TIL</a></li>
 </ul>
 </div>
 <ul class="social-links">
